--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,19 @@
             android:windowSoftInputMode="adjustPan">
         </activity>
         
+        <activity
+            android:name="com.ai.xswdstudent.activity.NextRegisterActivity"
+            android:label="@string/app_name" 
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        
+        
+            <activity
+            android:name="com.ai.xswdstudent.activity.RegisterActivity"
+            android:label="@string/app_name" 
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        
         
     </application>
 
