--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,11 +7,11 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-    
+
     <!-- xutils权限 -->
-	<uses-permission android:name="android.permission.INTERNET" /> 
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -19,8 +19,8 @@
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="com.ai.xswdstudent.fragment.MainFragmentActivity"
-            android:label="@string/app_name" 
-            android:windowSoftInputMode="adjustPan">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,24 +30,34 @@
         <!-- 城市选择 -->
         <activity
             android:name="com.ai.xswdstudent.activity.CitySelectActivity"
-            android:label="@string/app_name" 
-            android:windowSoftInputMode="adjustPan">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
-        
         <activity
             android:name="com.ai.xswdstudent.activity.NextRegisterActivity"
-            android:label="@string/app_name" 
-            android:windowSoftInputMode="adjustPan">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
-        
-        
-            <activity
+        <activity
             android:name="com.ai.xswdstudent.activity.RegisterActivity"
-            android:label="@string/app_name" 
-            android:windowSoftInputMode="adjustPan">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity
+            android:name="com.ai.xswdstudent.activity.ForgetPassword"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         
         
+          <activity
+            android:name="com.ai.xswdstudent.city.CityList"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+   
+        
+     
     </application>
 
 </manifest>
