--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -83,6 +83,13 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan" >
         </activity> 
+        <!-- 作业神器 -->
+        <activity
+            android:name="com.ai.xswdstudent.activity.HomeWorkActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity> 
+        
     </application>
 
 </manifest>
