--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,22 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+        
+        
+         <activity
+            android:name="com.ai.xswdstudent.activity.CollectionActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        
+        
+              <activity
+            android:name="com.ai.xswdstudent.activity.AboutUsActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        
+        
         <activity
             android:name="com.ai.xswdstudent.activity.NextRegisterActivity"
             android:label="@string/app_name"
@@ -43,6 +59,27 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+        
+        <activity
+            android:name="com.ai.xswdstudent.activity.BakeContentActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+            
+        </activity>
+        
+        
+            <activity
+            android:name="com.ai.xswdstudent.activity.TcherActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        
+                   <activity
+            android:name="com.ai.xswdstudent.activity.KcThcherFenleiActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+            
         <activity
             android:name="com.ai.xswdstudent.activity.ForgetPassword"
             android:label="@string/app_name"
@@ -63,7 +100,11 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan" >
         </activity>
-        
+               <activity
+            android:name="com.ai.xswdstudent.activity.MyOderListActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
                <activity
             android:name="com.ai.xswdstudent.activity.MyOrederActivity"
             android:label="@string/app_name"
@@ -89,7 +130,19 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan" >
         </activity> 
-        
+        <!-- 我的提问 -->
+        <activity
+            android:name="com.ai.xswdstudent.activity.HomeWorkOfMineActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>        
+        <!-- 问题详情 -->
+        <activity
+            android:name="com.ai.xswdstudent.activity.HomeWorkDetailsActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>  
+
     </application>
 
 </manifest>
